<resources>
    <string name="app_name">GON</string>

    <string-array name="navigation_drawer_array">
        <item>Edit profile</item>
        <item>News Feed</item>
        <item>Notifications</item>
        <item>Activity</item>
        <item>Messages</item>
        <item>Friends</item>
        <item>Meetings</item>
        <item>Logout</item>
    </string-array>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_enter_email">Enter your email</string>
    <string name="hint_new_password">Password</string>
    <string name="hint_new_confirmation_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="password">Password</string>
    <string name="login">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="or">or</string>
    <string name="facebook_signin">Sign in with Facebook account</string>
    <string name="next">NEXT?</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="create_account">Fill your Account Details</string>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_meeting">Meeting</string>

    <string name="hint_old_password">Old Password</string>
    <string name="hint_password">New Password</string>
    <string name="hint_password_confirmation">New Password Confirmation</string>

    <string name="app_id">426778267516396</string>

</resources>
